- wxMSW and wxGTK now send menu update events only when a menu is
  about to be used.

Unix:

- fixed compilation on systems with zlib installed but < 1.1.3 version
- fixed compilation on Solaris 7 with large files support enabled
- added wxTaskBarIcon implementation for X11
- added support for GNU/Hurd in configure
- wxLocale::Init now tries to set .utf8 locale in Unicode mode (Andreas Pflug)

wxGTK:

- added support for label mnemonics to GTK+2 build (Michael Moss)
- added native wxMessageDialog implementation for GTK+2 build
- fixed wxMenu::Remove (John Skiff and Benjamin Williams)
- made wxTextCtrl::EmulateKeyPress() work for Delete and Backspace
- fixed wxTopLevelWindow::ShowFullScreen to work with kwin, IceWM and
  window managers that support _NET_WM_STATE_FULLSCREEN
- added wxEVT_MENU_OPEN event generation
- fixed bug in generic file selector causing incomplete file extensions to
  be appended to filenames with no extension
- added wxTextCtrl::SetSelection implementation for GTK+ 2
- fixed wxTextCtrl::IsEditable() for GTK+ 2
- don't consume 100% CPU when showing a poup menu
- implemented wxListCtrl::Refresh() (Norbert Berzen)

wxMac:

- generate wxEVT_SCROLL_THUMBRELEASE and wxEVT_SCROLLWIN_THUMBRELEASE events
- generate wxEVT_MENU_OPEN and wxEVT_MENU_CLOSE events

wxMSW:

- possibility to use DIBs for wxBitmap implementation (Derry Bryson)
- wxStaticBitmap doesn't stretch its bitmap any longer (like other ports)
- support for accelerator keys in the owner drawn menus (Derry Bryson)
- wxCaret::SetSize() doesn't hide the caret any longer as it used to
- wxCheckListBox::Check() doesn't send CHECKLISTBOX_TOGGLE event any more
- fixed bug with wxTR_EDIT_LABELS not working with wxTR_MULTIPLE
- fixes for compilation with OpenWatcom and DigitalMars compilers
- fixed wxStaticText best size calculation (was wrong by '&' width)
- fixed calling wxFrame::Maximize(FALSE) before the window is shown
- added wxNotebook::HitTest() (Otto Wyss)